--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MACGREGOR</div></div>
         <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
+        <div>13</div>
+                <div>SANTA MARIA M59</div>
+
         <div id="count"></div>
     </div>
   </div>
@@ -41,6 +44,10 @@
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN H🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MORALES</div></div>
         <div class="board-item"><div class="board-item-content" id="a">AGUIRRE</div></div>
+                <div>10</div>
+                <div>SAN JOSE</div>
+
+
     </div>
   </div>
   <div class="board-column done">
@@ -56,6 +63,10 @@
         <div class="board-item"><div class="board-item-content" class="e">KONG</div></div>
         <div class="board-item"><div class="board-item-content" id="a">ANDRADE</div></div>
         <div class="board-item"><div class="board-item-content" id="a">DIAZ</div></div>
+                <div>10</div>
+                <div>RED BLUFF</div>
+
+
     </div>
   </div>
   <div class="board-column done">
@@ -72,6 +83,9 @@
         <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
         <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
         <div class="board-item"><div class="board-item-content" id="a">SAUNIER🚗</div></div>
+                <div>11</div>
+        <div>RESET</div>
+
     </div>
   </div>
   <div class="board-column done">
@@ -88,6 +102,10 @@
         <div class="board-item"><div class="board-item-content" class="e">DELACRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
         <div class="board-item"><div class="board-item-content" id="a">NGUYEN🚗</div></div>
+                <div>11 + 1</div>
+                <div>SAN JOSE</div>
+
+
     </div>
   </div>
   <div class="board-column done">
@@ -104,6 +122,10 @@
         <div class="board-item"><div class="board-item-content" class="e">OTIKA🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MAGANA</div></div>
         <div class="board-item"><div class="board-item-content" id="a">CLEMMONS🚗</div></div>
+                <div>11</div>
+                <div>RESET</div>
+
+
     </div>
   </div>
   <div class="board-column done">
@@ -124,6 +146,8 @@
         <div class="board-item"><div class="board-item-content" id="n">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SEBASTIAN</div></div>
+                <div>15</div>
+
     </div>
   </div>
 </div>
