--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
             });
             
 );
-            var element = Document.getElementById("count1");
-            console.log(element.childElementCount);
-            console.log(element.children.length);
+           // var element = Document.getElementById("count1");
+            //console.log(element.childElementCount);
+            //console.log(element.children.length);
         </script>
     </body>
 </html>
